<resources>
    <string name="app_name">SamakSouq</string>
    <string name="action_settings">Settings</string>
    <string name="label_title_cart">Cart</string>
    <string name="label_cart_checkout">Checkout</string>
    <string name="label_free_delivery_eligible">Congratulations! You are eligible for Free Delivery.</string>
    <string name="label_apply_coupon">Apply Coupon</string>
    <string name="label_title_checkout">Checkout</string>
    <string name="label_cart_continue">Continue</string>
    <string name="label_checkout_delivery">Delivery</string>
    <string name="label_checkout_slot">Slot</string>
    <string name="label_checkout_order">Order</string>
    <string name="label_delivery_address">Delivery Address</string>
    <string name="label_delivery_address_add">Add</string>
    <string name="label_deliver_here">Deliver here</string>
    <string name="label_delivery_address_edit">Edit</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="server_error">Something went wrong</string>
    <string name="label_title_delivery_address">Delivery Address</string>
    <string name="label_delivery_address_save">Save</string>
    <string name="hint_delivery_address_first_name">First Name</string>
    <string name="hint_delivery_address_last_name">Last Name</string>
    <string name="hint_delivery_address_house_number">Company/Flat/Villa Name </string>
    <string name="hint_delivery_address_house_name">Flat/ Villa No</string>
    <string name="hint_delivery_address_street_name">Street and Place Name</string>
    <string name="hint_delivery_address_landmark">Landmark</string>
    <string name="hint_delivery_address_phone_number">Postcode</string>
    <string name="label_delivey_address_update">Update</string>
    <string name="label_slot_evening">3.00 PM - 7.00 PM</string>
    <string name="label_slot_morning">8.00 AM - 12.00 PM</string>
    <string name="label_slot_express">Express</string>
    <string name="hint_search_details">Search your favourite fish</string>
    <string name="label_signup_title">Signup</string>
    <string name="label_register_first_name">First Name</string>
    <string name="hint_register_first_name">First Name</string>
    <string name="hint_register_last_name">Last Name</string>
    <string name="hint_register_email">Email</string>
    <string name="hint_register_password">Password</string>
    <string name="hint_register_c_password">Confirm Password</string>
    <string name="hint_register_phone">Phone Number</string>
    <string name="label_register">Register</string>
    <string name="register_successfully">Registered successfully</string>
    <string name="register_failed">Registration failed</string>
    <string name="label_fish_details_select_fish">Select the finish</string>
    <string name="label_fish_details_quantity_heading">Select the gross weight</string>
    <string name="label_fish_details_add_to_cart">Add to cart</string>
    <string name="label_cart_remove">Remove</string>
    <string name="message_remove_cart">Removed item from cart</string>
    <string name="message_update_cart">Cart updated</string>
    <string name="label_filter_search">Search for your favourite fish</string>
    <string name="label_filter_title">Filters</string>
    <string name="tv_filter_done">DONE</string>
    <string name="terms_and_condition"></string>
    <string name="label_rangebar_min">0 SAR</string>
    <string name="label_rangebar_max">100 SAR</string>
    <string name="label_me_service_available">Service Available Area</string>
    <string name="label_me_order">My Orders</string>
    <string name="label_me_support">Support</string>
    <string name="label_me_about">About</string>
    <string name="login_or_signup">Sign In / Sign Up</string>
    <string name="label_toolbar_support">Support</string>
    <string name="label_tollbar_area">Available Area</string>
    <string name="label_toolbar_my_order">My Order</string>
    <string name="label_account_name">Name</string>
    <string name="label_account_address">Address</string>
    <string name="label_account_mobile_no">Mobile Number</string>
    <string name="label_account_email">Email ID</string>
    <string name="label_save">Save</string>
    <string name="label_my_account">Account</string>
    <string name="label_account_last_name">Last Name</string>
    <string name="label_logout">Logout</string>
    <string name="alert_message_login">Do you want to login?</string>
    <string name="alert_message_logout">Do you want to logout?</string>
    <string name="label_complaint_name">Name</string>
    <string name="label_title_complaint">Complaint</string>
    <string name="label_complaint_email">Email ID</string>
    <string name="label_complaint">Complaint</string>
    <string name="label_complaint_submit">submit</string>
    <string name="label_title_login">Login</string>

    <string name="facebook_app_id">611535396338363</string>
    <string name="fb_login_protocol_scheme">fb611535396338363</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="label_welcome_previous">Previous</string>
    <string name="label_welcome_next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_welcome_finish">Done</string>
    <string name="label_actiion_menu_skip">Skip</string>
    <string name="label_hint_login_email_or_mobile">Email/Phone</string>
    <string name="label_hint_login_password">Password</string>
    <string name="label_login_submit">SIGN IN</string>
    <string name="label_login_forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="or_login_sign_up_with">or login/sign up with</string>
    <string name="pay_with_stored_card">Pay with stored card</string>
    <string name="use_a_stored_card">Use a stored card</string>
    <string name="label_title_coupon">Coupon</string>
    <string name="message_coupon_added">Coupon Added</string>
    <string name="messale_cart_remove">Are you sure you want to remove this item?</string>
    <string name="transaction_completed_successfully">Transaction completed successfully.</string>
    <string name="close">close</string>
    <string name="label_title_payment_success">Payment</string>
    <string name="label_place_order">Place Order</string>
    <string name="label_currency_aed">SAR</string>
    <string name="labe_filter_size">Size</string>
    <string name="label_filter_offers">Offers</string>
    <string name="label_filter_size_small">Small</string>
    <string name="label_filter_size_medium">Medium</string>
    <string name="label_filter_price">Price</string>
    <string name="label_filter_large">Large</string>
    <string name="label_filter_shell_fish">Shell Fish</string>
    <string name="label_home_cart">CART</string>
    <string name="label_home_home">HOME</string>
    <string name="label_home_me">ME</string>
    <string name="label_message_complaint_register_success">Complaint registered successfully</string>
    <string name="label_message_complaint_register_failed">Complaint registration failed</string>
    <string name="label_me_refer_a_friend">Refer a friend</string>
    <string name="label_me_address">Delivery Address</string>
    <string name="label_title_address">Address</string>
    <string name="label_no_address">No address available</string>
    <string name="label_address_delete">Delete</string>
    <string name="label_use_coupon">Use coupon code</string>
    <string name="label_coupon_apply">Apply</string>
    <string name="label_success_transaction">Your order has been successfully placed</string>
    <string name="label_cart_sub_total">Sub Total</string>
    <string name="label_cart_hyphan">-</string>
    <string name="label_cart_coupon">Other Discounts</string>
    <string name="label_cart_total">Grand Total</string>
    <string name="label_cart_total_over_view">Overview</string>
    <string name="label_zero_aed">SAR 0.00</string>
    <string name="label_default_delivery_charge_aed">SAR 5.00</string>
    <string name="label_cart_coupon_applied">Applied</string>
    <string name="message_cart_remove">Do you want to remove the coupon?</string>
    <string name="message_coupon_removed">Coupon removed</string>
    <string name="label_quantity_more">More</string>
    <string name="label_quantity_less">Less</string>
    <string name="label_empty_cart">Your cart is empty</string>
    <string name="label_empty_address">No address available</string>
    <string name="label_order_summary_header">Order summary</string>
    <string name="label_order_summary_order_id">Order Id</string>
    <string name="label_order_summary_delivery_date">Delivery Date</string>
    <string name="label_product_detail_header">Product Details</string>
    <string name="label_order_summary_weight">Gross Weight</string>
    <string name="label_order_summary_finish">Finish</string>
    <string name="label_order_summary_amount">Amount</string>
    <string name="label_shipping_address_header">Shipment address</string>
    <string name="message_user_not_logged">User not logged in</string>
    <string name="label_my_order_empty">No order available</string>
    <string name="label_cart_delivery">Delivery Charge</string>
    <string name="hint_enter_code">Enter your coupon code here</string>
    <string name="label_order_shipment_charge">Shipment Charge</string>
    <string name="label_order_total">Total</string>
    <string name="label_summary_total_header">Total</string>
    <string name="label_order_summary_delivery_slot">Delivery Slot</string>
    <string name="label_payment_option_cod">You have opted Cash on delivery as payment option</string>
    <string name="label_payment_option_telr">You have opted internet banking as payment option</string>
    <string name="label_mobile_code">+966</string>
    <string name="label_transaction_failure">oops</string>
    <string name="label_retry_again">Try again</string>
    <string name="label_todays_offer">Todays Offer</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="total_info">All fish Prices are on Gross weight, Net weight will be lesser as per cleaning type selected.</string>
    <string name="label_otp_submit">Submit</string>
    <string name="label_otp_enter_otp">Enter OTP Code</string>
    <string name="label_otp_otp_sent">OTP has been sent to\n your mobile phone</string>
    <string name="label_title_location">Your location</string>
    <string name="label_current_location">Use current location</string>
    <string name="action_location">Location</string>
    <string name="action_quick_view">Quick view</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid location</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="permission_rationale">Location permission is neccessary for this to function</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">Location is neccessary for proper functioning</string>
    <string name="label_choose_location">Choose one location from the below list</string>
    <string name="label_language_english">English</string>
    <string name="label_language_arabic">Arabic</string>


</resources>
