<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/label_signup_title"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="@android:color/white" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_signup_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_signup_left2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_signup_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_register_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/_16sdp"
        app:font_name="MontserratLight"
        android:hint="@string/hint_register_first_name"
        app:layout_constraintEnd_toStartOf="@+id/gl_signup_end"
        app:layout_constraintStart_toEndOf="@+id/gl_signup_left"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_register" />

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_register_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/hint_register_last_name"
        app:font_name="MontserratLight"
        app:layout_constraintEnd_toStartOf="@+id/gl_signup_end"
        app:layout_constraintStart_toEndOf="@+id/gl_signup_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_first_name" />

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/hint_register_email"
        app:font_name="MontserratLight"
        app:layout_constraintEnd_toStartOf="@+id/gl_signup_end"
        app:layout_constraintStart_toEndOf="@+id/gl_signup_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_last_name" />

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textWebPassword"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/hint_register_password"
        app:font_name="MontserratLight"
        app:layout_constraintEnd_toStartOf="@+id/gl_signup_end"
        app:layout_constraintStart_toEndOf="@+id/gl_signup_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_email" />

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_register_c_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textWebPassword"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/hint_register_c_password"
        app:font_name="MontserratLight"
        app:layout_constraintEnd_toStartOf="@+id/gl_signup_end"
        app:layout_constraintStart_toEndOf="@+id/gl_signup_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_password" />

    <qa.happytots.yameenhome.components.YameenTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14sdp"
        android:id="@+id/tv_register_mobile"
        app:layout_constraintStart_toStartOf="@+id/gl_signup_left"
        app:layout_constraintTop_toTopOf="@+id/edt_register_phone"
        app:layout_constraintBottom_toBottomOf="@+id/edt_register_phone"
        app:layout_constraintEnd_toStartOf="@+id/gl_signup_left2"
        android:text="@string/label_mobile_code"/>

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_register_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        app:font_name="MontserratLight"
        android:layout_marginTop="@dimen/_8sdp"
        android:maxLength="9"
        android:hint="@string/hint_register_phone"
        app:layout_constraintEnd_toStartOf="@+id/gl_signup_end"
        app:layout_constraintStart_toEndOf="@+id/gl_signup_left2"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_c_password" />

    <qa.happytots.yameenhome.components.YameenTextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_phone"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/rectangle_yellow"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingStart="@dimen/_34sdp"
        android:paddingEnd="@dimen/_34sdp"
        android:textAllCaps="true"
        android:gravity="center"
        app:font_name="MontserratBold"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/label_register"/>
</android.support.constraint.ConstraintLayout>