<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.ComplaintActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_complaint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/Yellow"
        android:theme="@style/ToolbarTheme"
        app:title="@string/label_title_complaint"
        app:titleTextColor="@android:color/white"/>

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_complaint_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_complaint"
        android:background="@drawable/rectangle_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:font_name="MontserratLight"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:inputType="textPersonName"
        android:hint="@string/label_complaint_name" />

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_complaint_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edt_complaint_name"
        android:background="@drawable/rectangle_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:font_name="MontserratLight"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:hint="@string/label_complaint_email"
        android:inputType="textEmailAddress" />

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_complaint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edt_complaint_email"
        android:background="@drawable/rectangle_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:font_name="MontserratLight"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:inputType="text|textMultiLine"
        android:hint="@string/label_complaint" />

    <qa.happytots.yameenhome.components.YameenTextView
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_yellow"
        android:text="@string/label_complaint_submit"
        app:font_name="MontserratBold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_complaint"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingStart="@dimen/_44sdp"
        android:paddingEnd="@dimen/_44sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:textAllCaps="true"
        android:textColor="@color/Black"/>

</android.support.constraint.ConstraintLayout>