<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.MyAccount">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_my_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Yellow"
        android:theme="@style/ToolbarTheme"
        app:title="@string/label_my_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white" />

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rectangle_gray"
        app:font_name="MontserratLight"
        android:hint="@string/hint_register_first_name"
        android:inputType="textPersonName"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/gray"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_my_account" />

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rectangle_gray"
        app:font_name="MontserratLight"
        android:hint="@string/label_account_last_name"
        android:inputType="textPostalAddress"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/gray"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_vertical_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <qa.happytots.yameenhome.components.YameenTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_mobile_code"
        app:font_name="MontserratLight"
        android:textSize="@dimen/_14sdp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@+id/edt_mobile_no"
        app:layout_constraintBottom_toBottomOf="@+id/edt_mobile_no"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical_account"
        app:layout_constraintTop_toBottomOf="@+id/edt_last_name"/>

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_mobile_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rectangle_gray"
        app:font_name="MontserratLight"
        android:hint="@string/label_account_mobile_no"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/gray"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl_vertical_account"
        app:layout_constraintTop_toBottomOf="@+id/edt_last_name" />

    <qa.happytots.yameenhome.components.YameenEditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rectangle_gray"
        app:font_name="MontserratLight"
        android:hint="@string/label_account_email"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/gray"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_mobile_no" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/sp_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"/>


    <qa.happytots.yameenhome.components.YameenButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/rectangle_yellow"
        app:font_name="MontserratBold"
        android:paddingStart="@dimen/_64sdp"
        android:paddingEnd="@dimen/_64sdp"
        android:text="@string/label_save"
        android:textColor="@color/Black"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_country" />

</android.support.constraint.ConstraintLayout>
