<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_success_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/Yellow"
        app:title="@string/label_title_payment_success"
        app:titleTextColor="@android:color/white"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_summary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_success_payment"
        app:layout_constraintBottom_toTopOf="@+id/btn_success_done"/>

    <qa.happytots.yameenhome.components.YameenTextView
        android:id="@+id/text_payment_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/transaction_completed_successfully"
        android:textAlignment="center"
        android:textColor="#18802b"
        android:textSize="@dimen/_20sdp"
        app:font_name="MontserratBold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_success_done"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_success_payment" />

    <qa.happytots.yameenhome.components.YameenTextView
        android:id="@+id/btn_success_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/bg_circular"
        android:onClick="closeWindow"
        android:text="@string/tv_filter_done"
        android:visibility="visible"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        app:font_name="MontserratBold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/_34sdp"
        android:paddingEnd="@dimen/_34sdp"
        android:paddingTop="@dimen/_4sdp"
        android:paddingBottom="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent" />



</android.support.constraint.ConstraintLayout>